@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-24T08:08:16Z",
-  "count_outdated" : 213,
-  "uniques_outdated" : 149,
+  "timestamp" : "2023-10-27T08:07:42Z",
+  "count_outdated" : 214,
+  "uniques_outdated" : 150,
   "count" : 215,
   "uniques" : 151,
   "clones" : [
-    {
-      "timestamp": "2023-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-20T00:00:00Z",
       "count": 1,
